add correct dimension of the grid in screen

--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Perfect</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1 class="page-title">Pixel Perfect</h1>
+        <h1 class="page-title">Etch-a-Sketch</h1>
     </header>
-    <div class="">
-        <div>
+    <div class="content">
+        <div id="grid-container">
 
         </div>
-        <div>
-            
+        <div class="etch-tools">
+            <div class="size-picker">
+                <button class="size-option" id="8">8x8</button>
+                <button class="size-option" id="16">16x16</button>
+                <button class="size-option" id="24">24x24</button>
+                <button class="size-option" id="32">32x32</button>
+                <button class="size-option" id="48">48x48</button>
+                <button class="size-option" id="64">64x64</button>
+            </div>
+            <div class="eraser">
+                <button>eraser</button>
+            </div>
         </div>
     </div>
+    <footer></footer>
 </body>
+<script src="script.js"></script>
 </html>
