use float/inline-block

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <h1 class="page-title">Etch-a-Sketch</h1>
     </header>
     <div class="content">
+        <div class="etch-tools">
+    
+        </div>
         <div id="grid-container">
 
         </div>
