--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     </header>
     <div class="content">
         <div class="etch-tools">
-    
+            <button id="paintbrush">paintbrush</button>
+            <button id="eraser">eraser</button>
         </div>
         <div id="grid-container">
-
+            <!--JS SCRIPT PUTS DIVS/GRIDS HERE-->
         </div>
         <div class="etch-tools">
             <div class="size-picker">
@@ -25,9 +26,6 @@
                 <button class="size-option" id="32">32x32</button>
                 <button class="size-option" id="48">48x48</button>
                 <button class="size-option" id="64">64x64</button>
-            </div>
-            <div class="eraser">
-                <button>eraser</button>
             </div>
         </div>
     </div>
